# shader_recompiler

./: .gitmodules  CMakeLists.txt
src/: analysis.cpp  analysis.h  common.h  compiler.cpp  compiler.h  compiler_control_flow.cpp  compiler_data_share.cpp  compiler_debug_profile.cpp  compiler_defs.h  compiler_export.cpp  compiler_scalar_alu.cpp  compiler_scalar_memory.cpp  compiler_vector_alu.cpp  compiler_vector_interpolation.cpp  compiler_vector_memory.cpp  decoder.cpp  decoder.h  fetch_shader.cpp  fetch_shader.h  gcn_constants.h  gcn_enum.h  gcn_mod_info.h  header.cpp  header.h  instruction.cpp  instruction.h  instruction_iterator.cpp  instruction_iterator.h  instruction_util.cpp  instruction_util.h  module.cpp  module.h  object_pool.h  program_info.cpp  program_info.h  recompiler.cpp  recompiler.h  shader_binary.h  shader_key.h  shader_meta.h  (+5 more)
src/common/: assert.cpp  assert.h  enum.h  object_bank.h  struct_bank.cpp  struct_bank.h
src/control_flow/: control_flow_graph.cpp  control_flow_graph.h  divergent_flow.cpp  divergent_flow.h  dominator_tree.cpp  dominator_tree.h  loop_info.cpp  loop_info.h  stackifier.cpp  stackifier.h  token_list.cpp  token_list.h
src/frontend/: control_flow_graph.cpp  control_flow_graph.h  decode.cpp  decode.h  format.cpp  instruction.cpp  instruction.h  opcodes.h  structured_control_flow.cpp  structured_control_flow.h
src/frontend/translate/: data_share.cpp  export.cpp  scalar_alu.cpp  scalar_memory.cpp  translate.cpp  translate.h  vector_alu.cpp  vector_memory.cpp
src/ir/: abstract_syntax_list.h  attribute.cpp  attribute.h  basic_block.cpp  basic_block.h  breadth_first_search.h  ir_emitter.cpp  ir_emitter.h  microinstruction.cpp  opcodes.cpp  opcodes.h  opcodes.inc  post_order.cpp  post_order.h  program.cpp  program.h  reg.h  type.cpp  type.h  value.cpp  value.h
src/ir/passes/: ssa_rewrite_pass.cpp
src/sb_parser/: CMakeLists.txt  error.cpp  main.cpp  shader.h  shaderbinary.h  types.h  validate.cpp  validate.h
src/spirv/: GLSL.std.450.h  spirv_code_buffer.cpp  spirv_code_buffer.h  spirv_instruction.h  spirv_module.cpp  spirv_module.h
tools/sb_parser/: CMakeLists.txt  error.h  main.cpp  shader.cpp  shader.h  shaderbinary.h  strings.h  types.cpp  types.h  validate.cpp  validate.h
